# Vritti

./: .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  PROGRESS.md  README.md  RELEASE_NOTES.md  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt  ruff.toml  run_dev.sh
.github/workflows/: cd.yml  ci.yml
docs/: API_GUIDE.md  ARCHITECTURE.md  BEST_PRACTICES.md  BILLING.md  CICD.md  KYRODB_SETUP.md  LLM_CONFIGURATION.md  OBSERVABILITY.md  RUNBOOKS.md  STORAGE_ARCHITECTURE.md  STRUCTURED_LOGGING.md  TROUBLESHOOTING.md  VRITTI_INTEGRATION_GUIDE.md
examples/: aider_integration.py  coding_agent_integration.py  structured_logging_demo.py  test_no_auth.py
k8s/: service.yaml
k8s/production/: kustomization.yaml
k8s/staging/: kustomization.yaml
monitoring/: grafana_dashboard_mission_metrics.json  prometheus_alerts_mission.yml
scripts/: deploy.sh  init_customer_db.py  run_clustering_job.py
src/: __init__.py  config.py  main.py  rate_limits.py
src/auth/: __init__.py  dependencies.py
src/billing/: __init__.py  quota_middleware.py  stripe_service.py  usage_tracking.py  webhooks.py
src/gating/: service.py
src/hygiene/: clustering.py  decay.py  templates.py
src/ingestion/: capture.py  embedding.py  multi_perspective_reflection.py  reflection.py  tiered_reflection.py
src/kyrodb/: client.py  kyrodb_pb2.py  kyrodb_pb2_grpc.py  router.py
src/kyrodb/proto/: kyrodb.proto
src/models/: clustering.py  customer.py  episode.py  gating.py  search.py  skill.py
src/observability/: __init__.py  health.py  logging.py  logging_middleware.py  metrics.py  middleware.py  request_limits.py
src/resilience/: __init__.py  circuit_breakers.py
src/retrieval/: __init__.py  preconditions.py  ranking.py  search.py
src/routers/: __init__.py  customers.py
src/skills/: promotion.py
src/storage/: __init__.py  database.py
src/utils/: identifiers.py  pii_redaction.py  resource_tracker.py  structured_extraction.py
src/webhooks/: signing.py
tests/: conftest.py  test_admin_endpoints.py  test_advanced_search_integration.py  test_api.py  test_api_key_auth_storage.py  test_cached_tier_integration.py  test_clustering.py  test_config_validation.py  test_customer_isolation.py  test_decay_policy.py  test_embedding_offline_policy.py  test_gating.py  test_gating_parameters.py  test_ingestion.py  test_input_validation.py  test_integration_e2e.py  test_llm_precondition_validation.py  test_metrics.py  test_mission_validation_e2e.py  test_multi_perspective_reflection.py  test_pii_redaction_ner.py  test_reflection_persistence.py  test_retrieval.py  test_skills_promotion.py  test_structured_extraction.py  test_structured_logging.py  test_tier_integration.py  test_tiered_reflection.py
tests/chaos/: test_fault_injection.py
tests/integration/: conftest.py  test_cached_tier_real.py  test_full_pipeline.py  test_full_workflow.py  test_gating_integration.py  test_kyrodb_real.py  test_openrouter_api.py  test_reflection_e2e.py  test_skills_integration.py  test_skills_promotion_e2e.py
tests/load/: conftest.py  locustfile.py  test_load.py  test_load_1000_rps.py
