[tool.poetry]
name = "episodic-memory"
version = "0.1.0"
description = "Application-layer episodic memory system built on KyroDB"
authors = ["KyroDB Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sentence-transformers = "^2.3.0"
transformers = "^4.48.0"
torch = "^2.1.0"
Pillow = "^10.2.0"
scikit-learn = "^1.4.0"
openai = "^1.10.0"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
black = "^24.1.0"
isort = "^5.13.0"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
