[tool.poetry]
name = "episodic-memory"
version = "0.1.0"
description = "Application-layer episodic memory system built on KyroDB"
authors = ["KyroDB Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.128.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
grpcio = "1.67.1"
grpcio-tools = "1.67.1"
protobuf = "5.28.3"
pydantic = "2.12.5"
pydantic-settings = "2.12.0"
sentence-transformers = "2.3.0"
transformers = "4.55.0"
torch = "2.9.1"
Pillow = "10.3.0"
openai = "1.10.0"
python-dotenv = "1.0.0"

# Utilities
aiofiles = "23.2.1"
aiosqlite = "0.19.0"
cachetools = "5.3.2"
httpx = "0.25.1"
slowapi = "0.1.9"
structlog = "24.1.0"

# Resilience
pybreaker = "1.0.1"
tenacity = "8.2.3"

# Hygiene / clustering
hdbscan = ">=0.8.33"
scikit-learn = ">=1.4.0"
numpy = ">=1.24.0,<2.0.0"

# PII redaction
presidio-analyzer = "2.2.360"
presidio-anonymizer = "2.2.360"
spacy = ">=3.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
black = "^24.3.0"
isort = "^5.13.0"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = "src/kyrodb/kyrodb_pb2(_grpc)?\\.py$"

[[tool.mypy.overrides]]
module = [
    "grpc",
    "grpc.*",
    "sentence_transformers",
    "transformers",
    "pybreaker",
    "hdbscan",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "src.kyrodb.kyrodb_pb2",
    "src.kyrodb.kyrodb_pb2_grpc",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.kyrodb.client",
    "src.kyrodb.router",
    "src.retrieval.search",
]
disable_error_code = "attr-defined"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
